--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,23 +1,68 @@
 backend:
-  name: git-gateway
-  branch: main # Branch to update (optional; defaults to master)
+  name: github
+  repo: simonazoulay/D0Z  # Remplace par ton nom d'utilisateur GitHub et le nom de ton repo
+  branch: main
 
-media_folder: "assets/img/uploads" # Media files will be stored in the repo under assets/img/uploads
-public_folder: "assets/img/uploads" # The src attribute for uploaded media will begin with /assets/img/uploads
+media_folder: "blog/articles_html/images"
+public_folder: "blog/articles_html/images"
 
 collections:
-  # --- BLOG ---
-  - name: "blog"
-    label: "Articles Blog"
-    folder: "blog/articles_html"
-    create: true
-    slug: "{{slug}}"
-    fields:
-      - {label: "Titre", name: "title", widget: "string"}
-      - {label: "Description SEO", name: "description", widget: "text"}
-      - {label: "Catégorie", name: "category", widget: "select", options: ["Lagree", "Nutrition", "Lifestyle", "Conseils"]}
-      - {label: "Image Principale", name: "image", widget: "image"}
-      - {label: "Contenu", name: "body", widget: "markdown"}
+  # --- PLANNING LAGREE ---
+  - name: "planning"
+    label: "Planning Lagree"
+    files:
+      - name: "planning"
+        label: "Planning de la semaine"
+        file: "data/planning.json"
+        fields:
+          - label: "Lundi"
+            name: "monday"
+            widget: "list"
+            fields:
+              - {label: "Heure", name: "time", widget: "string"}
+              - {label: "Cours", name: "course", widget: "select", options: ["LAGREE ESSENTIEL", "BOOTY & CORE", "LAGREE FUSION", "ADVANCED", "DOZ SHOW"]}
+          
+          - label: "Mardi"
+            name: "tuesday"
+            widget: "list"
+            fields:
+              - {label: "Heure", name: "time", widget: "string"}
+              - {label: "Cours", name: "course", widget: "select", options: ["LAGREE ESSENTIEL", "BOOTY & CORE", "LAGREE FUSION", "ADVANCED", "DOZ SHOW"]}
+          
+          - label: "Mercredi"
+            name: "wednesday"
+            widget: "list"
+            fields:
+              - {label: "Heure", name: "time", widget: "string"}
+              - {label: "Cours", name: "course", widget: "select", options: ["LAGREE ESSENTIEL", "BOOTY & CORE", "LAGREE FUSION", "ADVANCED", "DOZ SHOW"]}
+          
+          - label: "Jeudi"
+            name: "thursday"
+            widget: "list"
+            fields:
+              - {label: "Heure", name: "time", widget: "string"}
+              - {label: "Cours", name: "course", widget: "select", options: ["LAGREE ESSENTIEL", "BOOTY & CORE", "LAGREE FUSION", "ADVANCED", "DOZ SHOW"]}
+          
+          - label: "Vendredi"
+            name: "friday"
+            widget: "list"
+            fields:
+              - {label: "Heure", name: "time", widget: "string"}
+              - {label: "Cours", name: "course", widget: "select", options: ["LAGREE ESSENTIEL", "BOOTY & CORE", "LAGREE FUSION", "ADVANCED", "DOZ SHOW"]}
+          
+          - label: "Samedi"
+            name: "saturday"
+            widget: "list"
+            fields:
+              - {label: "Heure", name: "time", widget: "string"}
+              - {label: "Cours", name: "course", widget: "select", options: ["LAGREE ESSENTIEL", "BOOTY & CORE", "LAGREE FUSION", "ADVANCED", "DOZ SHOW"]}
+          
+          - label: "Dimanche"
+            name: "sunday"
+            widget: "list"
+            fields:
+              - {label: "Heure", name: "time", widget: "string"}
+              - {label: "Cours", name: "course", widget: "select", options: ["LAGREE ESSENTIEL", "BOOTY & CORE", "LAGREE FUSION", "ADVANCED", "DOZ SHOW"]}
 
   # --- MENU COFFEE ---
   - name: "menu"
@@ -32,7 +77,8 @@ collections:
             widget: "list"
             fields:
               - {label: "Nom", name: "name", widget: "string"}
-              - {label: "Description", name: "desc", widget: "string"}
+              - {label: "Description", name: "desc", widget: "string", required: false}
+          
           - label: "Plats Sucrés"
             name: "sweet"
             widget: "list"
@@ -51,22 +97,17 @@ collections:
               - {label: "Description", name: "desc", widget: "text"}
               - {label: "Options (Suppléments)", name: "options", widget: "list", required: false}
 
-  # --- PLANNING LAGREE ---
-  - name: "planning"
-    label: "Planning Lagree"
-    file: "data/planning.json"
+  # --- ARTICLES BLOG ---
+  - name: "blog"
+    label: "Articles Blog"
+    folder: "blog/articles_html"
+    create: true
+    slug: "{{slug}}"
+    extension: "html"
+    format: "frontmatter"
     fields:
-      - label: "Lundi"
-        name: "monday"
-        widget: "list"
-        fields: 
-          - {label: "Heure", name: "time", widget: "string"}
-          - {label: "Cours", name: "course", widget: "select", options: ["LAGREE ESSENTIEL", "BOOTY & CORE", "LAGREE FUSION", "ADVANCED"]}
-      - label: "Mardi"
-        name: "tuesday"
-        widget: "list"
-        fields: 
-          - {label: "Heure", name: "time", widget: "string"}
-          - {label: "Cours", name: "course", widget: "select", options: ["LAGREE ESSENTIEL", "BOOTY & CORE", "LAGREE FUSION", "ADVANCED"]}
-      # ... (idem pour les autres jours)
-
+      - {label: "Titre", name: "title", widget: "string"}
+      - {label: "Description SEO", name: "description", widget: "text"}
+      - {label: "Catégorie", name: "category", widget: "select", options: ["Lagree", "Nutrition", "Lifestyle", "Conseils", "Technique"]}
+      - {label: "Image à la une", name: "image", widget: "image"}
+      - {label: "Contenu", name: "body", widget: "markdown"}
